[metadata]
name = codeforces-client
version = 0.0.6
author = Mykola Mostovenko
author_email = sofigenr@gmail.com
description = Codeforces Client is a Python library and tooling for working with Codeforces.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sofigern/codeforces
project_urls =
    Bug Tracker = https://github.com/sofigern/codeforces/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cf-cli = codeforces_client.__main__:run